Load only required IC Modules

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,9 @@ BreakableCharms/Settings/.idea/.idea.Settings.dir/.idea/encodings.xml
 BreakableCharms/Settings/.idea/.idea.Settings.dir/.idea/indexLayout.xml
 BreakableCharms/Settings/.idea/.idea.Settings.dir/.idea/projectSettingsUpdater.xml
 BreakableCharms/Settings/.idea/.idea.Settings.dir/.idea/workspace.xml
+.idea/.idea.BreakableCharms/.idea/encodings.xml
+.idea/.idea.BreakableCharms/.idea/indexLayout.xml
+.idea/.idea.BreakableCharms/.idea/misc.xml
+.idea/.idea.BreakableCharms/.idea/projectSettingsUpdater.xml
+.idea/.idea.BreakableCharms/.idea/vcs.xml
+.idea/.idea.BreakableCharms/.idea/workspace.xml
