Re-add Osmi as dependency and make sure health updates correctly

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ BreakableCharms/Settings/.idea/.idea.Settings.dir/.idea/workspace.xml
 .idea/.idea.BreakableCharms/.idea/projectSettingsUpdater.xml
 .idea/.idea.BreakableCharms/.idea/vcs.xml
 .idea/.idea.BreakableCharms/.idea/workspace.xml
+BreakableCharms.sln.DotSettings.user
