--- a/BreakableCharms/BreakableCharms.csproj
+++ b/BreakableCharms/BreakableCharms.csproj
@@ -12,8 +12,7 @@
         <NoWarn>CS1591</NoWarn>
         <HollowKnightFolder>C:\Program Files (x86)\Steam\steamapps\common\Hollow Knight\hollow_knight_Data\Managed</HollowKnightFolder>
         <OutputDirectory>$(HollowKnightFolder)/Mods</OutputDirectory>
-
-
+        <PlatformTarget>x64</PlatformTarget>
     </PropertyGroup>
     
     <!-- Same References -->
@@ -35,6 +34,9 @@
         </Reference>
         <Reference Include="MonoMod.Utils, Version=21.4.29.1, Culture=neutral, PublicKeyToken=null">
             <HintPath>$(HollowKnightFolder)\MonoMod.Utils.dll</HintPath>
+        </Reference>
+        <Reference Include="Osmi">
+          <HintPath>..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Hollow Knight\hollow_knight_Data\Managed\Mods\Osmi\Osmi.dll</HintPath>
         </Reference>
         <Reference Include="PlayMaker, Version=1.6.0.0, Culture=neutral, PublicKeyToken=null">
             <HintPath>$(HollowKnightFolder)\PlayMaker.dll</HintPath>
