delete unneeded delicate abstract item

--- a/.gitignore
+++ b/.gitignore
@@ -4,14 +4,6 @@ obj/
 riderModule.iml
 /_ReSharper.Caches/
 *.zip
-BreakableCharms/Settings/.idea/.idea.Settings.dir/.idea/encodings.xml
-BreakableCharms/Settings/.idea/.idea.Settings.dir/.idea/indexLayout.xml
-BreakableCharms/Settings/.idea/.idea.Settings.dir/.idea/projectSettingsUpdater.xml
-BreakableCharms/Settings/.idea/.idea.Settings.dir/.idea/workspace.xml
-.idea/.idea.BreakableCharms/.idea/encodings.xml
-.idea/.idea.BreakableCharms/.idea/indexLayout.xml
-.idea/.idea.BreakableCharms/.idea/misc.xml
-.idea/.idea.BreakableCharms/.idea/projectSettingsUpdater.xml
-.idea/.idea.BreakableCharms/.idea/vcs.xml
-.idea/.idea.BreakableCharms/.idea/workspace.xml
+BreakableCharms/Settings/.idea/*
+.idea/.idea.BreakableCharms/.idea/*
 BreakableCharms.sln.DotSettings.user
