--- a/BreakableCharms/BreakableCharms.csproj
+++ b/BreakableCharms/BreakableCharms.csproj
@@ -10,8 +10,11 @@
         <TargetFramework>net472</TargetFramework>
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
         <NoWarn>CS1591</NoWarn>
-        <HollowKnightFolder>C:\Program Files (x86)\Steam\steamapps\common\Hollow Knight\hollow_knight_Data\Managed</HollowKnightFolder>
-        <OutputDirectory>$(HollowKnightFolder)/Mods</OutputDirectory>
+        <HollowKnightFolder Condition="$([MSBuild]::IsOSPlatform('Windows'))">C:\Program Files (x86)\Steam\steamapps\common\Hollow Knight\hollow_knight_Data\Managed</HollowKnightFolder>
+        <OutputDirectory Condition="$([MSBuild]::IsOSPlatform('Windows'))">$(HollowKnightFolder)/Mods</OutputDirectory>
+        <HollowKnightFolder Condition="$([MSBuild]::IsOSPlatform('Linux'))" >../HKManaged</HollowKnightFolder>
+        <OutputDirectory Condition="$([MSBuild]::IsOSPlatform('Linux'))" >$(SolutionDir)</OutputDirectory>
+
         <PlatformTarget>x64</PlatformTarget>
     </PropertyGroup>
     
@@ -21,13 +24,13 @@
             <HintPath>$(HollowKnightFolder)\Assembly-CSharp.dll</HintPath>
         </Reference>
         <Reference Include="ConnectionMetadataInjector">
-          <HintPath>..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Hollow Knight\hollow_knight_Data\Managed\Mods\ConnectionMetadataInjector\ConnectionMetadataInjector.dll</HintPath>
+          <HintPath>$(HollowKnightFolder)\Mods\ConnectionMetadataInjector\ConnectionMetadataInjector.dll</HintPath>
         </Reference>
         <Reference Include="ItemChanger">
-          <HintPath>..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Hollow Knight\hollow_knight_Data\Managed\Mods\ItemChanger\ItemChanger.dll</HintPath>
+          <HintPath>$(HollowKnightFolder)\Mods\ItemChanger\ItemChanger.dll</HintPath>
         </Reference>
         <Reference Include="MenuChanger">
-          <HintPath>..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Hollow Knight\hollow_knight_Data\Managed\Mods\MenuChanger\MenuChanger.dll</HintPath>
+          <HintPath>$(HollowKnightFolder)\Mods\MenuChanger\MenuChanger.dll</HintPath>
         </Reference>
         <Reference Include="MMHOOK_PlayMaker, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
             <HintPath>$(HollowKnightFolder)\MMHOOK_PlayMaker.dll</HintPath>
@@ -42,16 +45,16 @@
             <HintPath>$(HollowKnightFolder)\MonoMod.Utils.dll</HintPath>
         </Reference>
         <Reference Include="Osmi">
-          <HintPath>..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Hollow Knight\hollow_knight_Data\Managed\Mods\Osmi\Osmi.dll</HintPath>
+          <HintPath>$(HollowKnightFolder)\Mods\Osmi\Osmi.dll</HintPath>
         </Reference>
         <Reference Include="PlayMaker, Version=1.6.0.0, Culture=neutral, PublicKeyToken=null">
             <HintPath>$(HollowKnightFolder)\PlayMaker.dll</HintPath>
         </Reference>
         <Reference Include="RandomizerCore">
-          <HintPath>..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Hollow Knight\hollow_knight_Data\Managed\Mods\RandomizerCore\RandomizerCore.dll</HintPath>
+          <HintPath>$(HollowKnightFolder)\Mods\RandomizerCore\RandomizerCore.dll</HintPath>
         </Reference>
-        <Reference Include="RandomizerMod">
-          <HintPath>..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Hollow Knight\hollow_knight_Data\Managed\Mods\RandomizerMod\RandomizerMod.dll</HintPath>
+        <Reference Include="Randomizer 4">
+          <HintPath>$(HollowKnightFolder)\Mods\Randomizer 4\RandomizerMod.dll</HintPath>
         </Reference>
         <Reference Include="UnityEngine, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
             <HintPath>$(HollowKnightFolder)\UnityEngine.dll</HintPath>
