attempt to fix build actions

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,4 +34,4 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: BreakableCharms
-          path: ./BreakableCharms/
+          path: ./BreakableCharms/BreakableCharms.zip/
