--- a/BreakableCharms/BreakableCharms.csproj
+++ b/BreakableCharms/BreakableCharms.csproj
@@ -26,6 +26,9 @@
         <Reference Include="ConnectionMetadataInjector">
           <HintPath>$(HollowKnightFolder)\Mods\ConnectionMetadataInjector\ConnectionMetadataInjector.dll</HintPath>
         </Reference>
+        <Reference Include="HKMirror">
+          <HintPath>$(HollowKnightFolder)\Mods\HKMirror\HKMirror.dll</HintPath>
+        </Reference>
         <Reference Include="ItemChanger">
           <HintPath>$(HollowKnightFolder)\Mods\ItemChanger\ItemChanger.dll</HintPath>
         </Reference>
