--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,6 @@ riderModule.iml
 /_ReSharper.Caches/
 *.zip
 BreakableCharms/Settings/.idea/*
+BreakableCharms/.idea/*
 .idea/.idea.BreakableCharms/.idea/*
 BreakableCharms.sln.DotSettings.user
